# vibe-video

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
app/: __init__.py  json_utils.py  schemas.py  server.py
app/templates/: index.html
docs/: api.md  architecture.md  changelog.md
scripts/: garden_autoedit_mvp.py  start.sh
tests/: test_safety.py  test_schemas.py
tests/fixtures/project_minimal/: analysis.json  edit_plan.json  shots.json  story_script.json
